--- a/src/main/resources/templates/fragments/defaultHead.html
+++ b/src/main/resources/templates/fragments/defaultHead.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<HTML xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
+<div th:fragment="head" xmlns:th="http://www.w3.org/1999/xhtml">
     <title th:text="${title}"></title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <meta charset="UTF-8"/>
     <!-- Bootstrap -->
     <<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-</head>
-<body>
-<div class="container clas">
-    <p th:text="${info}"/>
 </div>
-
-</body>
-</HTML>
