--- a/src/main/resources/templates/registerCode.html
+++ b/src/main/resources/templates/registerCode.html
@@ -2,30 +2,25 @@
 <HTML xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"></title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
-    <meta charset="UTF-8"/>
-    <!-- Bootstrap -->
-    <<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <div th:replace="fragments/defaultHead :: head"/>
 </head>
 <body>
 <div class="container clas">
-    <form th:action="@{/register}" method="POST">
+    <form th:action="@{/register/}" method="POST">
         <div class="form-group">
-            <label for="firstPass">Email address</label>
+            <label for="firstPass">Password</label>
             <input type="password" name="firstPass" class="form-control" id="firstPass" aria-describedby="emailHelp" placeholder="Enter password">
-            <label for="secondPass">Email address</label>
+            <label for="secondPass">Repeat Password</label>
             <input type="password" name="secondPass" class="form-control" id="secondPass" aria-describedby="emailHelp" placeholder="Repeat password">
-            <label for="name">Email address</label>
-            <input type="password" name="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter name">
-            <label for="secondName">Email address</label>
-            <input type="password" name="secondName" class="form-control" id="secondName" aria-describedby="emailHelp" placeholder="Enter last name">
+            <label for="name">Name</label>
+            <input type="text" name="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter name">
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" class="form-control" id="lastName" aria-describedby="emailHelp" placeholder="Enter last name">
+            <input type="hidden" name="code" th:value="${code}">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<div th:replace="fragments/scripts :: scripts"/>
 </body>
 </HTML>
