--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,24 @@
 .clas{
-    height: 500px;
     width: 40%;
     background:plum;
     text-align: center;
     padding: 100px;
+}
+.flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.flex-item {
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
 }
