Create new version of menu based on fragments, Early alpha version of quest, user and admin interface, Several changes in user entity, Mapped user settings pages

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -9,8 +9,9 @@
     <<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/menu :: menu"/>
 <div class="container clas">
-    <p th:text="${info}"/>
+    <p th:text="${info}" class="information"/>
 </div>
 
 </body>
