--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,6 +5,7 @@
     <div th:replace="fragments/defaultHead :: head"/>
 </head>
 <body>
+<div th:replace="fragments/menu :: menu"/>
 <div class="container clas">
     <form th:action="@{/register}" method="POST">
         <div class="form-group">
