--- a/src/main/resources/templates/shop/item.html
+++ b/src/main/resources/templates/shop/item.html
@@ -5,6 +5,7 @@
     <div th:replace="fragments/defaultHead :: head"/>
 </head>
 <body>
+<div th:replace="fragments/menu :: menu"/>
 <div class="container clas">
             <div class="flex-item card" style="width: 18rem;">
                 <img class="card-img-top" th:src="@{/images/img.jpg}" alt="Card image cap"/>
