--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,8 @@
     <div th:replace="fragments/defaultHead :: head"/>
 </head>
 <body>
+<div th:replace="fragments/menu :: menu"/>
 <div class="container clas">
-<ul class="list-group">
-    <li class="list-group-item">Simple Shop</li>
-    <li class="list-group-item"><a href="/login">Login</a> </li>
-</ul>
     <ul class="flex-container">
     <li th:each="category : ${categories}" style="margin-top:10px;" class="">
         <div class="flex-item card" style="width: 18rem;margin: auto;">
