--- a/src/main/resources/templates/shop/category.html
+++ b/src/main/resources/templates/shop/category.html
@@ -5,6 +5,7 @@
     <div th:replace="fragments/defaultHead :: head"/>
 </head>
 <body>
+<div th:replace="fragments/menu :: menu"/>
 <div class="container clas">
     <ul class="flex-container">
         <li th:each="item : ${items}" style="margin-top:10px;" class="">
