--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,7 +10,8 @@
     <form th:action="@{/register}" method="POST" class="form">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                   placeholder="Enter email" required="required">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
