--- a/src/main/resources/templates/user/security.html
+++ b/src/main/resources/templates/user/security.html
@@ -7,6 +7,7 @@
 <body>
 <div class="container clas">
     <div th:replace="fragments/menu :: menu"/>
+    <div th:replace="fragments/settingsMenu :: settingsMenu"/>
     <table class="table">
         <thead>
         <tr>
