--- a/src/main/resources/templates/admin/newItem.html
+++ b/src/main/resources/templates/admin/newItem.html
@@ -10,15 +10,16 @@
     <form th:action="@{/admin/new-item}" th:object="${item}" method="POST">
         <div class="form-group">
             <label>Name</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="Enter name">
+            <input type="text" th:field="*{name}" class="form-control" placeholder="Enter name" required="required">
         </div>
         <div class="form-group">
             <label>Value</label>
-            <input type="text" th:field="*{value}" class="form-control" placeholder="Enter value">
+            <input type="text" th:field="*{value}" class="form-control" placeholder="Enter value" required="required">
         </div>
         <div class="form-group">
             <label>Description</label>
-            <input type="text" th:field="*{description}" class="form-control" placeholder="Enter description">
+            <input type="text" th:field="*{description}" class="form-control" placeholder="Enter description"
+                   required="required">
         </div>
         <select name="cat">
             <option th:each="currentCategory : ${categoryList}"
