--- a/src/main/resources/templates/fragments/adminMenu.html
+++ b/src/main/resources/templates/fragments/adminMenu.html
@@ -1,6 +1,6 @@
 <div th:fragment="adminMenu" xmlns:th="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">SimpleShop</a>
+        <a class="navbar-brand" href="#" th:text="${title}"/>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{${href} +'admin/new-item'}">Add new item</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{${href} +'admin/shipping-option'}">Shipping Option</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,6 +36,9 @@
                             <a th:href="@{${href}+'shop/'+ ${category.name}}" th:text="${category.name}"></a>
                         </div>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{${href} +'logout'}">Logout</a>
                 </li>
             </ul>
         </div>
