--- a/src/main/resources/templates/fragments/questMenu.html
+++ b/src/main/resources/templates/fragments/questMenu.html
@@ -1,6 +1,6 @@
 <div th:fragment="questMenu" xmlns:th="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">SimpleShop</a>
+        <a class="navbar-brand" href="#" th:text="${title}"/>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
