--- a/src/main/resources/templates/fragments/userMenu.html
+++ b/src/main/resources/templates/fragments/userMenu.html
@@ -1,6 +1,6 @@
 <div th:fragment="userMenu" xmlns:th="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">SimpleShop</a>
+        <a class="navbar-brand" href="#" th:text="${title}"/>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,9 @@
                             <a th:href="@{${href}+'shop/'+ ${category.name}}" th:text="${category.name}"></a>
                         </div>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{${href} +'logout'}">Logout</a>
                 </li>
             </ul>
         </div>
