--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,11 +10,13 @@
     <form th:action="@{/login}" method="POST" class="form">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                   placeholder="Enter email" required="required">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="exampleInputPassword1"
+                   placeholder="Password" required="required">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
