--- a/src/main/resources/templates/shop/item.html
+++ b/src/main/resources/templates/shop/item.html
@@ -13,6 +13,14 @@
         <p th:text="*{value}"></p>
                     <p th:text="*{category.name}"></p>
                 </div>
+    <form action="#" method="POST" class="form">
+        <h3>Add to cart</h3>
+        <div class="form-group">
+            <label for="amount">Amount</label>
+            <input type="number" name="amount" class="form-control" id="amount" placeholder="Amount">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 <div th:replace="fragments/scripts :: scripts"/>
 </body>
