Add shipping option aspects, Create CustomUserLog

--- a/src/main/resources/templates/admin/logs.html
+++ b/src/main/resources/templates/admin/logs.html
@@ -34,6 +34,7 @@
             <th scope="col">Ip</th>
             <th scope="col">Second Ip</th>
             <th scope="col">User Id</th>
+            <th scope="col">Description</th>
         </tr>
         </thead>
         <tbody>
@@ -44,6 +45,7 @@
             <td th:text="${log.ip}"/>
             <td th:text="${log.secondIp}"/>
             <td th:text="${log.user.id}"/>
+            <td th:text="${log.description}"/>
         </tr>
         </tbody>
     </table>
