--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -18,6 +18,7 @@
             <th scope="col">Registration Date</th>
             <th scope="col">Update Date</th>
             <th scope="col">Roles</th>
+            <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
@@ -33,6 +34,9 @@
                 <div th:each="role :${user.roles}">
                     <div th:text="${role.role}"/>
                 </div>
+            </td>
+            <td>
+                <a th:href="@{${href} +'admin/users/'+${user.id}}"><img th:src="@{/images/edit.png}"width="16px"/></a>
             </td>
         </tr>
         </tbody>
