--- a/src/main/resources/templates/fragments/settingsMenu.html
+++ b/src/main/resources/templates/fragments/settingsMenu.html
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{${href} +'settings/security'}">Security</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{${href} +'settings/address'}">Address</a>
+                </li>
             </ul>
         </div>
     </nav>
