--- a/src/main/resources/templates/admin/item.html
+++ b/src/main/resources/templates/admin/item.html
@@ -14,6 +14,7 @@
             <th scope="col">Name</th>
             <th scope="col">Value</th>
             <th scope="col">Category</th>
+            <th scope="col">Image</th>
         </tr>
         </thead>
         <tbody>
