after login error bug fix, edit front, pages more transparent, add order admin pages

--- a/src/main/resources/templates/fragments/adminMenu.html
+++ b/src/main/resources/templates/fragments/adminMenu.html
@@ -21,6 +21,9 @@
                     <a class="nav-link" th:href="@{${href} +'admin/items'}">Items</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{${href} +'admin/order'}">Orders</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{${href} +'admin/shipping-option'}">Shipping Option</a>
                 </li>
                 <li class="nav-item dropdown">
