--- a/src/main/resources/templates/shop/item.html
+++ b/src/main/resources/templates/shop/item.html
@@ -8,20 +8,36 @@
 <div class="container clas">
     <div th:replace="fragments/menu :: menu"/>
     <div th:object="${item}">
-        <h5 th:text="*{name}"/>
-        <p th:text="*{description}"/>
-        <p th:text="*{value}"/>
-        <p th:text="*{category.name}"/>
-        <img th:src="@{${href} +'image/'+*{id}}"/>
-                </div>
-    <form action="#" method="POST" class="form">
-        <h3>Add to cart</h3>
-        <div class="form-group">
-            <label for="amount">Amount</label>
-            <input type="number" name="amount" class="form-control" id="amount" placeholder="Amount" required="required">
+        <table>
+            <tr>
+                <td style="width: 33%"><img th:src="@{${href} +'image/'+*{id}}" class="item-image"/></td>
+                <td style="width: 33%;text-align: center">
+                    <h2 th:text="*{name}"/>
+                    <div><h5>Value</h5>
+                    <div th:text="*{value}"/>
+                    </div>
+                        <div><h5>Category</h5>
+                            <div th:text="*{category.name}"/>
+                        </div>
+                </td>
+
+                <td style="width: 33%;padding-left: 20px"><form action="#" method="POST" >
+                    <h3>Add to cart</h3>
+                    <div class="form-group">
+                        <label for="amount">Amount</label>
+                        <input type="number" name="amount" class="form-control" id="amount" placeholder="Amount" required="required">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Buy</button>
+                </form></td>
+
+            </tr>
+        </table>
+        <div><h5>Description</h5>
+        <div th:text="*{description}"/>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
+
+
 </div>
 <div th:replace="fragments/scripts :: scripts"/>
 </body>
