--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -27,25 +27,47 @@
     <p th:text="${user.adress.street1line}"/>
     </p>
     <p>
-        <div th:each="order :${user.orders}">
-    <p>items</p>
-    <div th:each="item :${order.cart.items}">
-        <div th:text="${item.item.name}"/>
-        <div th:text="${item.item.value}"/>
-        <div th:text="${item.amount}"/>
+    <div th:each="order :${user.orders}" style="border:2px bisque solid">
+        <h2>Items</h2>
+        <table>
+            <tr>
+                <td>Name</td>
+                <td>Value</td>
+                <td>Amount</td>
+            </tr>
+            <tr th:each="item :${order.cart.items}">
+                <td th:text="${item.item.name}"/>
+                <td th:text="${item.item.value}"/>
+                <td th:text="${item.amount}"/>
+            </tr>
+        </table>
+        <h2>Shipping</h2>
+        <h5>Name</h5>
+        <div th:text="${order.shipping.option.name}"/>
+        <h5>Cost</h5>
+        <div th:text="${order.shipping.option.cost}"/>
+        <div>
+            <h5>Address</h5>
+            <table>
+                <tr>
+                    <td>City</td>
+                    <td th:text="${order.shipping.adress.city}"/>
+                </tr><tr>
+                <td>Country</td>
+                <td th:text="${order.shipping.adress.country}"/>
+            </tr><tr>
+                <td>Postal Adress</td>
+                <td th:text="${order.shipping.adress.postalAdress}"/>
+            </tr><tr>
+                <td>Home number</td>
+                <td th:text="${order.shipping.adress.homeNumber}"/>
+            </tr><tr>
+                <td>Street</td>
+                <td th:text="${order.shipping.adress.street1line}"/>
+            </tr>
+            </table>
+        </div>
     </div>
-    <p>Shipping</p>
-    <div th:text="${order.shipping.option.name}"/>
-    <div th:text="${order.shipping.option.cost}"/>
-    <div>
-        <p th:text="${order.shipping.adress.city}"/>
-        <p th:text="${order.shipping.adress.country}"/>
-        <p th:text="${order.shipping.adress.postalAdress}"/>
-        <p th:text="${order.shipping.adress.homeNumber}"/>
-        <p th:text="${order.shipping.adress.street1line}"/>
-        </p>
-    </div>
-</div>
     <div th:replace="fragments/scripts :: scripts"/>
 </body>
 </HTML>
