--- a/src/main/resources/templates/fragments/defaultHead.html
+++ b/src/main/resources/templates/fragments/defaultHead.html
@@ -1,5 +1,6 @@
 <div th:fragment="head" xmlns:th="http://www.w3.org/1999/xhtml">
     <title th:text="${title}"/>
+    <link rel="shortcut icon"  href="/static/favicon.ico" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <meta charset="UTF-8"/>
     <!-- Bootstrap -->
