--- a/src/main/resources/templates/shop/buy.html
+++ b/src/main/resources/templates/shop/buy.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <HTML xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head>
-    <div th:replace="fragments/defaultHead :: head"/>
+<head th:include="fragments/defaultHead :: head">
 </head>
 <body>
 <div class="container clas">
