Add category hierarchy, need head first 'root' category Update edit-category and add option to set parent category

--- a/src/main/resources/templates/admin/edit-category.html
+++ b/src/main/resources/templates/admin/edit-category.html
@@ -11,6 +11,11 @@
             <label>Name</label>
             <input type="text" name="name" th:value="${category.name}" lass="form-control" placeholder="Enter name" required="required">
         </div>
+        <select name="parentId">
+            <option th:each="currentCategory : ${allCategories}"
+                    th:value="${currentCategory.id}"
+                    th:text="${currentCategory.name}">
+        </select>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
